<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheetDragHandleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_state_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_johor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_johor" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Johor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_kedah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_kedah" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Kedah"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_kelantan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_kelantan" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Kelantan"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_melaka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_melaka" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Melaka"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_negeri_sembilan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_negeri_sembilan" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Negeri_Sembilan"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_pahang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_pahang" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pahang"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_perak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_perak" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Perak"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_perlis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_perlis" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Perlis"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_pulau_pinang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_pulau_pinang" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pulau_Pinang"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_sabah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_sabah" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sabah"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_sarawak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_sarawak" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sarawak"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_selangor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_selangor" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Selangor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_state_terengganu"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/flag_terengganu" />

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Terengganu"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</LinearLayout>