<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheetDragHandleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_category_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_historical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Historical"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hotel"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_museum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Museum"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_park"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Park"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Restaurant"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_wildlife"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingVertical="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

                <TextView
                    style="@style/TEXT_CONTRAST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Wildlife"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</LinearLayout>